web-infras/parser/tests/fixtures/babel/es2015/yield/in-global-scope/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|yield 10
 |     ^
